[package]
name = "hyperacme"
description = "Async library for requesting certificates from an ACME provider (acme-micro fork)."
license = "MIT"
repository = "https://github.com/randomairborne/hyperacme"
readme = "README.md"
version = "0.0.1"
authors = [
    "Martin Algesten <martin@algesten.se>",
    "kpcyrd <git@rxv.cc>",
    "valkyrie_pilot <valk@randomairborne.dev>"
]
keywords = ["letsencrypt", "acme", "async"]
categories = ["web-programming", "api-bindings"]
edition = "2021"

[dependencies]
base64 = "0.13"
lazy_static = "1.4"
tracing = "0.1"
tokio = { version = "1", features = ["test-util", "macros", "time", "rt-multi-thread"]}
openssl = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
reqwest = { version = "0.11", features = ["json"] }
ring = "0.16"

[dev-dependencies]
doc-comment = "0.3"
env_logger = { version = "0.8", default-features = false }
futures = "0.1.25"
hyper = "0.12"
regex = "1.4"
