[package]
name = "hyperacme"
description = "Async library for requesting certificates from an ACME provider (acme-micro fork)."
license = "MIT"
repository = "https://github.com/randomairborne/hyperacme"
readme = "README.md"
version = "0.1.3"
authors = [
    "Martin Algesten <martin@algesten.se>",
    "kpcyrd <git@rxv.cc>",
    "valkyrie_pilot <valk@randomairborne.dev>"
]
keywords = ["letsencrypt", "acme", "async"]
categories = ["web-programming", "api-bindings"]
edition = "2021"
rust_version = "1.60"

[features]
default = ["tokio", "rustls"]
tokio = ["dep:tokio", "dep:reqwest"]
async-std = ["dep:async-std", "dep:surf"]
rustls = ["dep:ring", "surf?/h1-client-rustls", "reqwest?/rustls"]
native-tls = ["dep:openssl", "surf?/h1-client", "reqwest?/native-tls"]

[dependencies]
async-std = { version = "1.11", features = ["attributes"], optional = true }
base64 = "0.13"
lazy_static = "1.4"
tracing = "0.1"
tokio = { version = "1", features = ["test-util", "macros", "time", "rt-multi-thread"], optional = true}
openssl = { version = "0.10", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
surf = { version = "2.3", default-features = false, optional = true }
chrono = "0.4"
reqwest = { version = "0.11", features = ["json"], default-features = false,  optional = true }
ring = { version = "0.16", optional = true }


[dev-dependencies]
doc-comment = "0.3"
env_logger = { version = "0.8", default-features = false }
futures = "0.1.25"
hyper = "0.12"
regex = "1.4"
