[package]
name = "hyperacme"
description = "Async library for requesting certificates from an ACME provider."
license = "MIT"
repository = "https://github.com/randomairborne/hyperacme"
readme = "README.md"
version = "0.2.0"
authors = ["valkyrie_pilot <valk@randomairborne.dev>"]
keywords = ["letsencrypt", "acme", "async"]
categories = ["web-programming", "api-bindings"]
edition = "2021"
rust_version = "1.75"

[features]
default = ["rustls"]
rustls = ["reqwest/rustls"]
native-tls = ["reqwest/native-tls"]

[dependencies]
reqwest = { version = "0.11", features = [], default-features = false }
serde = { version = "1", features = ["derive"] }
jose-b64 = { version = "0.1.2", features = ["serde"] }
jose-jws = "0.1"
serde_json = "1"
thiserror = "1"



[dev-dependencies]
